--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: jthopple.com
           <a href="http://flickr.com/jthopple">Photos</a>
         </li>
         <li>
-          <a href="http://github.com/jthopple.com">Code</a>
+          <a href="http://github.com/jthopple">Code</a>
         </li>
         <li>
           Blog entries returning soon...
